Making of the html clothing items

--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./assets/style.css">
-        <title>SIMAN</title>
+        <title>Siman store</title>
     </head>
     <body>
         
         <header class="header">
-            <a href="#" class="Logo">SIMAN</a>
+            <a href="#" class="Logo">SIMAN.com</a>
 
             <nav class="navbar">
-               <a href="#">Home</a> 
-               <a href="#">Clothing</a>
-               <a href="#">Beauty and health</a>
-               <a href="#">Electronics</a>
+               <a href="index.html">Home</a> 
+               <a href="clothing.html">Clothing</a>
+               <a href="beauty.html">Beauty and health</a>
+               <a href="electronics.html">Electronics</a>
             </nav>
+
         </header>
         <main>
-
+            <h1>Welcome to Siman Stores</h1>
+            <! acá va un flyer de descuentos, maybe ubicaciones de las tiendas -->
         </main>
     </body>
 </html>
