Making of the html beauty and health html elements

--- a/beauty.html
+++ b/beauty.html
@@ -20,8 +20,48 @@
             
         </header>
         <main>
-            <h1>Beauty and health for everyone</h1>
-            <! acá va un flyer de descuentos, maybe ubicaciones de las tiendas -->
+
+            <div class="storeItem" id="beautyItem1">
+                <img src="https://images.ctfassets.net/j0994xxhz671/4R1FWRAaGx1c2yamO2DQj0/6312656b30d425d6d91c3adce02089bd/VapoRub_50g_jar_open.Final_Color_Output.0004_840.png" class="images">
+                <h3 class="itemHeaders">Beauty and health item</h3>
+                <p class="itemInfo">Lorem ipsum dolor sit amet</p>
+                <h4 class="itemPrice">$$$</h4>
+            </div>
+
+            <div class="storeItem" id="beautyItem2">
+                <img src="https://aquavera.shop/cdn/shop/files/AV-LT1.jpg?v=1718991744" class="images">
+                <h3 class="itemHeaders">Beauty and health item</h3>
+                <p class="itemInfo">Lorem ipsum dolor sit amet</p>
+                <h4 class="itemPrice">$$$</h4>
+            </div>
+
+            <div class="storeItem" id="beautyItem3">
+                <img src="https://i5.walmartimages.com/seo/CeraVe-Hydrating-Facial-Cleanser-Daily-Face-Wash-for-Normal-to-Dry-Skin-12-fl-oz_c65b3996-4b1d-4b7b-aeb8-14d6691c4a41.484e97e2d294f451610c34a2bc7a7f16.jpeg" class="images">
+                <h3 class="itemHeaders">Beauty and health item</h3>
+                <p class="itemInfo">Lorem ipsum dolor sit amet</p>
+                <h4 class="itemPrice">$$$</h4>
+            </div>
+
+            <div class="storeItem" id="beautyItem4">
+                <img src="https://flowerknows.co/cdn/shop/files/preview_images/6b8a4209466044a691cb023d90b6a3c5.thumbnail.0000000000.jpg?v=1712292575&width=1500" class="images">
+                <h3 class="itemHeaders">Beauty and health item</h3>
+                <p class="itemInfo">Lorem ipsum dolor sit amet</p>
+                <h4 class="itemPrice">$$$</h4>
+            </div>
+
+            <div class="storeItem" id="beautyItem5">
+                <img src="https://titan.vtexassets.com/arquivos/ids/161453/Salud-y-Belleza-Fijadores-de-Cabello_30136410_1.jpg?v=637318197380670000" class="images">
+                <h3 class="itemHeaders">Beauty and health item</h3>
+                <p class="itemInfo">Lorem ipsum dolor sit amet</p>
+                <h4 class="itemPrice">$$$</h4>
+            </div>
+
+            <div class="storeItem" id="beautyItem6">
+                <img src="https://picture.drhauschka.co.uk/media/image/be/ed/76/3134663-liquid-eyeliner-container-01-01-420005981.jpg" class="images">
+                <h3 class="itemHeaders">Beauty and health item</h3>
+                <p class="itemInfo">Lorem ipsum dolor sit amet</p>
+                <h4 class="itemPrice">$$$</h4>
+            </div>
         </main>
     </body>
 </html>
