--- a/clothing.html
+++ b/clothing.html
@@ -20,7 +20,7 @@
             
         </header>
         <main>
-            <h1>Clothing for everyone</h1>
+            <h1 class="pageTitle">Clothing for everyone</h1>
             <div class="storeItem" id="clothingItem1">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2Hspp7p2QNCeeREFuMAiRAisbqsCulervZA&s" class="images">
                 <h3 class="itemHeaders">Clothing item</h3>
