--- a/electronics.html
+++ b/electronics.html
@@ -20,8 +20,8 @@
             
         </header>
         <main>
-            <h1>Bienvenid@ a tiendas Siman</h1>
-            <! acá va un flyer de descuentos, maybe ubicaciones de las tiendas -->
+            <h1 class="pageTitle">The best electronics for you</h1>
+            
         </main>
     </body>
 </html>
