Landing sale page hmtl layout

--- a/clothing.html
+++ b/clothing.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="storeItem" id="clothingItem2">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.amazon.com.mx%2FGen%25C3%25A9rico-peque%25C3%25B1os-Pantalones-Vacaciones-Exteriores%2Fdp%2FB0CCP6DQ5J&psig=AOvVaw0wmGoMBSCpiOa0EqrIIkx8&ust=1730082287739000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOChsPTArYkDFQAAAAAdAAAAABAJ" class="images">
+                <img src="https://i.pinimg.com/564x/56/bb/79/56bb798a30463e46e9935266ee996b37.jpg" class="images">
                 <h3 class="itemHeaders">Clothing item</h3>
                 <p class="itemInfo">Lorem ipsum dolor sit amet</p>
                 <h4 class="itemPrice">$$$</h4>
