Styling of the navbar and different page tabs

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             <a href="#" class="Logo">SIMAN.com</a>
 
             <nav class="navbar">
-               <a href="index.html">Home</a> 
-               <a href="clothing.html">Clothing</a>
-               <a href="beauty.html">Beauty and health</a>
-               <a href="electronics.html">Electronics</a>
+               <a href="index.html" class="navbarText">Home</a> 
+               <a href="clothing.html" class="navbarText">Clothing</a>
+               <a href="beauty.html" class="navbarText">Beauty and Health</a>
+               <a href="electronics.html" class="navbarText">Electronics</a>
             </nav>
 
         </header>
-        <main>
+        <main class="homePage">
             <h1>Welcome to Siman Stores</h1>
             <div class="salesFlyer">
                 <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/0beb574f-6637-4e2c-b4a6-8b757419f5dd___691a936824220c2276cfdfe3ba204c9f.jpg">
