--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <main class="homePage">
             <h1>Welcome to Siman Stores</h1>
             <div class="salesFlyer">
-                <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/0beb574f-6637-4e2c-b4a6-8b757419f5dd___691a936824220c2276cfdfe3ba204c9f.jpg">
+                <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/0beb574f-6637-4e2c-b4a6-8b757419f5dd___691a936824220c2276cfdfe3ba204c9f.jpg" class="mainSaleImage">
             </div>
             <div class="locations">
                 <h2>You can find us in the next locations</h2>
@@ -35,21 +35,21 @@
             </div>
             <a href="beauty.html" class="saleItem">
                 <div class="saleItemContainer" id="beauty">
-                    <img src="https://media.istockphoto.com/id/1440458000/photo/young-girl-with-hands-near-skin-face.jpg?s=612x612&w=0&k=20&c=gevqcCVe_NRBEMZUWtmRXa7at9w773zgWMV0MdqX2ho=">
+                    <img src="https://media.istockphoto.com/id/1440458000/photo/young-girl-with-hands-near-skin-face.jpg?s=612x612&w=0&k=20&c=gevqcCVe_NRBEMZUWtmRXa7at9w773zgWMV0MdqX2ho=" class="homeImages">
                     <div class="saleText" id="saleTextBeauty">Makeup and skincare SALE</div>
                 </div>
             </a>
 
             <a href="clothing.html" class="saleItem">
                 <div class="saleItemContainer" id="clothing">
-                    <img src="https://media.istockphoto.com/id/1307568521/photo/its-the-denim-that-does-it-for-me.jpg?s=612x612&w=0&k=20&c=0RQfpn8VJxXl6sO4aUehTsPvyYKGPwVwz1EdJRBU_Nw=">
+                    <img src="https://media.istockphoto.com/id/1307568521/photo/its-the-denim-that-does-it-for-me.jpg?s=612x612&w=0&k=20&c=0RQfpn8VJxXl6sO4aUehTsPvyYKGPwVwz1EdJRBU_Nw=" class="homeImages">
                     <div class="saleText" id="saleTextClothing">Fashion SALE</div>
                 </div>
             </a>
 
             <a href="electronics.html" class="saleItem">
                 <div class="saleItemContainer" id="electronics">
-                    <img src="https://media.istockphoto.com/id/1390307383/photo/a-day-at-the-office.jpg?s=612x612&w=0&k=20&c=0sfI2DYO-TNQz1E1uT7xpIkMPR-G6VAAteYjCvaRb-8=">
+                    <img src="https://media.istockphoto.com/id/1390307383/photo/a-day-at-the-office.jpg?s=612x612&w=0&k=20&c=0sfI2DYO-TNQz1E1uT7xpIkMPR-G6VAAteYjCvaRb-8=" class="homeImages">
                     <div class="saleText" id="saleTextElectronics">Electronics SALE</div>
                 </div>
             </a>
