Positioning the home text on the flyers for the discounts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./assets/style.css">
         <title>Siman store</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Rammetto+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Rammetto+One&family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     </head>
     <body>
         
@@ -21,39 +26,45 @@
         </header>
         <main class="homePage">
             <h1>Welcome to Siman Stores</h1>
-            <div class="salesFlyer">
-                <img src="https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/0beb574f-6637-4e2c-b4a6-8b757419f5dd___691a936824220c2276cfdfe3ba204c9f.jpg" class="mainSaleImage">
+            <div class="homeContainer">
+                <div class="homeColumn1">
+                    <div class="salesFlyer">
+                        <img src="https://media.istockphoto.com/id/1398610798/photo/young-woman-in-linen-shirt-shorts-and-high-heels-pointing-to-the-side-and-talking.jpg?s=612x612&w=0&k=20&c=JULY1xsUtiur9QPMxqrzgC2VbnhuT4dSnHWcpFQnuAQ=" class="mainSaleImage">
+                        <div class="saleText" id="saleTextMain">60% HOLIDAY SALE</div>
+                    </div>
+                    <div class="locations">
+                        <h2>You can find us in the next locations</h2>
+                        <ul>
+                            <li>Location 1</li>
+                            <li>Location 2</li>
+                            <li>Location 3</li>
+                            <li>Location 4</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="homeColumn2">
+                    <a href="beauty.html" class="saleItem">
+                        <div class="saleItemContainer" id="beauty">
+                            <img src="https://media.istockphoto.com/id/1440458000/photo/young-girl-with-hands-near-skin-face.jpg?s=612x612&w=0&k=20&c=gevqcCVe_NRBEMZUWtmRXa7at9w773zgWMV0MdqX2ho=" class="homeImages">
+                            <div class="saleText" id="saleTextBeauty">Makeup and skincare SALE</div>
+                        </div>
+                    </a>
+
+                    <a href="clothing.html" class="saleItem">
+                        <div class="saleItemContainer" id="clothing">
+                            <img src="https://media.istockphoto.com/id/1307568521/photo/its-the-denim-that-does-it-for-me.jpg?s=612x612&w=0&k=20&c=0RQfpn8VJxXl6sO4aUehTsPvyYKGPwVwz1EdJRBU_Nw=" class="homeImages">
+                            <div class="saleText" id="saleTextClothing">Fashion SALE</div>
+                        </div>
+                    </a>
+
+                    <a href="electronics.html" class="saleItem">
+                        <div class="saleItemContainer" id="electronics">
+                            <img src="https://media.istockphoto.com/id/1390307383/photo/a-day-at-the-office.jpg?s=612x612&w=0&k=20&c=0sfI2DYO-TNQz1E1uT7xpIkMPR-G6VAAteYjCvaRb-8=" class="homeImages">
+                            <div class="saleText" id="saleTextElectronics">Electronics SALE</div>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="locations">
-                <h2>You can find us in the next locations</h2>
-                <ul>
-                    <li>Location 1</li>
-                    <li>Location 2</li>
-                    <li>Location 3</li>
-                    <li>Location 4</li>
-                </ul>
-            </div>
-            <a href="beauty.html" class="saleItem">
-                <div class="saleItemContainer" id="beauty">
-                    <img src="https://media.istockphoto.com/id/1440458000/photo/young-girl-with-hands-near-skin-face.jpg?s=612x612&w=0&k=20&c=gevqcCVe_NRBEMZUWtmRXa7at9w773zgWMV0MdqX2ho=" class="homeImages">
-                    <div class="saleText" id="saleTextBeauty">Makeup and skincare SALE</div>
-                </div>
-            </a>
-
-            <a href="clothing.html" class="saleItem">
-                <div class="saleItemContainer" id="clothing">
-                    <img src="https://media.istockphoto.com/id/1307568521/photo/its-the-denim-that-does-it-for-me.jpg?s=612x612&w=0&k=20&c=0RQfpn8VJxXl6sO4aUehTsPvyYKGPwVwz1EdJRBU_Nw=" class="homeImages">
-                    <div class="saleText" id="saleTextClothing">Fashion SALE</div>
-                </div>
-            </a>
-
-            <a href="electronics.html" class="saleItem">
-                <div class="saleItemContainer" id="electronics">
-                    <img src="https://media.istockphoto.com/id/1390307383/photo/a-day-at-the-office.jpg?s=612x612&w=0&k=20&c=0sfI2DYO-TNQz1E1uT7xpIkMPR-G6VAAteYjCvaRb-8=" class="homeImages">
-                    <div class="saleText" id="saleTextElectronics">Electronics SALE</div>
-                </div>
-            </a>
-
         </main>
     </body>
 </html>
