Final layout for the home page

--- a/index.html
+++ b/index.html
@@ -25,21 +25,15 @@
 
         </header>
         <main class="homePage">
-            <h1>Welcome to Siman Stores</h1>
+            <h1 id="welcomeSign">Welcome to Siman Stores</h1>
             <div class="homeContainer">
                 <div class="homeColumn1">
-                    <div class="salesFlyer">
-                        <img src="https://media.istockphoto.com/id/1398610798/photo/young-woman-in-linen-shirt-shorts-and-high-heels-pointing-to-the-side-and-talking.jpg?s=612x612&w=0&k=20&c=JULY1xsUtiur9QPMxqrzgC2VbnhuT4dSnHWcpFQnuAQ=" class="mainSaleImage">
+                    <div class="salesFlyerContainer">
+                        <img src="https://img.freepik.com/free-photo/joyous-friendly-looking-smiling-girl-points-aside-with-happy-expression-toothy-smile-pleased-show-awesome-advertisement_273609-33977.jpg?t=st=1730166897~exp=1730170497~hmac=c9406296e9c916be54f2d8dd51a109a9c9c628580ce982877693fd8d2c144379&w=996" class="mainSaleImage">
                         <div class="saleText" id="saleTextMain">60% HOLIDAY SALE</div>
                     </div>
-                    <div class="locations">
-                        <h2>You can find us in the next locations</h2>
-                        <ul>
-                            <li>Location 1</li>
-                            <li>Location 2</li>
-                            <li>Location 3</li>
-                            <li>Location 4</li>
-                        </ul>
+                    <div class="homeDescription">
+                        <h2>Check our departments bellow</h2>
                     </div>
                 </div>
                 <div class="homeColumn2">
