sale item containers text correction

--- a/clothing.html
+++ b/clothing.html
@@ -32,7 +32,7 @@
                     <div class="itemDescription">
                         <h3 class="itemHeaders">Clothing item</h3>
                         <p class="itemInfo">Lorem ipsum dolor sit amet</p>
-                        <h4 class="itemPrice">$$$</h4>
+                        <h4 class="itemPrice">$99.99</h4>
                     </div>
                 </div>
 
@@ -41,7 +41,7 @@
                     <div class="itemDescription">
                         <h3 class="itemHeaders">Clothing item</h3>
                         <p class="itemInfo">Lorem ipsum dolor sit amet</p>
-                        <h4 class="itemPrice">$$$</h4>
+                        <h4 class="itemPrice">$99.99</h4>
                     </div>
                 </div>
 
@@ -50,7 +50,7 @@
                     <div class="itemDescription">
                         <h3 class="itemHeaders">Clothing item</h3>
                         <p class="itemInfo">Lorem ipsum dolor sit amet</p>
-                        <h4 class="itemPrice">$$$</h4>
+                        <h4 class="itemPrice">$99.99</h4>
                     </div>
                 </div>
 
@@ -59,7 +59,7 @@
                     <div class="itemDescription">
                         <h3 class="itemHeaders">Clothing item</h3>
                         <p class="itemInfo">Lorem ipsum dolor sit amet</p>
-                        <h4 class="itemPrice">$$$</h4>
+                        <h4 class="itemPrice">$99.99</h4>
                     </div>
                 </div>
 
@@ -68,7 +68,7 @@
                     <div class="itemDescription">
                         <h3 class="itemHeaders">Clothing item</h3>
                         <p class="itemInfo">Lorem ipsum dolor sit amet</p>
-                        <h4 class="itemPrice">$$$</h4>
+                        <h4 class="itemPrice">$99.99</h4>
                     </div>
                 </div>
 
@@ -77,7 +77,7 @@
                     <div class="itemDescription">
                         <h3 class="itemHeaders">Clothing item</h3>
                         <p class="itemInfo">Lorem ipsum dolor sit amet</p>
-                        <h4 class="itemPrice">$$$</h4>
+                        <h4 class="itemPrice">$99.99</h4>
                     </div>
                 </div>
             </div>
