Introductions of icons class to the navbar icon management

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <header class="header">
             <a href="#" class="Logo">SIMAN.com</a>
 
+            <label for="" class="icons">
+                <i class='bx bx-menu'></i>
+            </label>
+
             <nav class="navbar">
                <a href="index.html" class="navbarText">Home</a> 
                <a href="clothing.html" class="navbarText">Clothing</a>
