Basic layout of the drop menu and adding the close icon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <a href="#" class="Logo">SIMAN.com</a>
 
             <label for="" class="icons">
-                <i class='bx bx-menu'></i>
+                <i class='bx bx-menu' id="menu-icon"></i>
+                <i class='bx bx-x' id="close-icon"></i>
             </label>
 
             <nav class="navbar">
