final and responsive layout for the navbar

--- a/beauty.html
+++ b/beauty.html
@@ -17,18 +17,22 @@
         <header class="header">
             <a href="#" class="Logo">SIMAN.com</a>
 
-            <label for="" class="icons">
-                <i class='bx bx-menu'></i>
+            <input type="checkbox" id="check">
+
+            <label for="check" class="icons">
+                <i class='bx bx-menu' id="menu-icon"></i>
+                <i class='bx bx-x' id="close-icon"></i>
             </label>
 
             <nav class="navbar">
-                <a href="index.html" class="navbarText">Home</a> 
-                <a href="clothing.html" class="navbarText">Clothing</a>
-                <a href="beauty.html" class="navbarText">Beauty and Health</a>
-                <a href="electronics.html" class="navbarText">Electronics</a>
-             </nav> 
-            
+               <a href="index.html" class="navbarText">Home</a> 
+               <a href="clothing.html" class="navbarText">Clothing</a>
+               <a href="beauty.html" class="navbarText">Beauty and Health</a>
+               <a href="electronics.html" class="navbarText">Electronics</a>
+            </nav>
+
         </header>
+
         <main class="tabs">
             <h1 class="pageTitle">Beauty and health for everyone</h1>
             <div class="container">
