--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <header class="header">
             <a href="#" class="Logo">SIMAN.com</a>
 
-            <label for="" class="icons">
+            <input type="checkbox" id="check">
+
+            <label for="check" class="icons">
                 <i class='bx bx-menu' id="menu-icon"></i>
                 <i class='bx bx-x' id="close-icon"></i>
             </label>
@@ -30,6 +32,7 @@
             </nav>
 
         </header>
+        
         <main class="homePage">
             <h1 id="welcomeSign">Welcome to Siman Stores</h1>
             <div class="homeContainer">
